--- a/public/css/style.css
+++ b/public/css/style.css
@@ -277,3 +277,32 @@ body .footer .content {
 
 
 /*---------------------------------- footer ----------------------------------*/
+
+.title_p {
+    font-size: 1.875rem;
+}
+
+.box_shadow_product {
+    --tw-ring-offset-shadow: 0 0 rgba(0, 0, 0, 0);
+    --tw-ring-shadow: 0 0 rgba(0, 0, 0, 0);
+    --tw-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+    -webkit-box-shadow: var(--tw-ring-offset-shadow, 0 0 rgba(0, 0, 0, 0)), var(--tw-ring-shadow, 0 0 rgba(0, 0, 0, 0)), var(--tw-shadow);
+    -moz-box-shadow: var(--tw-ring-offset-shadow, 0 0 rgba(0, 0, 0, 0)), var(--tw-ring-shadow, 0 0 rgba(0, 0, 0, 0)), var(--tw-shadow);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 rgba(0, 0, 0, 0)), var(--tw-ring-shadow, 0 0 rgba(0, 0, 0, 0)), var(--tw-shadow);
+}
+
+.border_img {
+    border: 4px solid rgba(203, 213, 225, 1);
+}
+
+.gradient_dark_blue {
+    --tw-gradient-to: #1e293b;
+    --tw-gradient-from: #64748b;
+    --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(100, 116, 139, 0));
+    background-image: linear-gradient(180deg, var(--tw-gradient-stops));
+}
+
+.pattern_1 {
+    background-image: url("../files/pattern_1.svg");
+    background-repeat: repeat;
+}
